--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,7 @@ buildFuture: false
 buildExpired: false
 
 pygmentsUseClasses: true
-# googleAnalytics: UA-123-45
+googleAnalytics: G-7M8VQL57TF
 
 minify:
   disableXML: true
